SERVER-17835: geoNear pipeline stage no longer needs to specify uniqueDocs

(cherry picked from commit e42605bba71b9fc99b9ce275f46302df98f82670)